--- a/5. JavaScript 1/Document.html
+++ b/5. JavaScript 1/Document.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Random Shit</h1>
+    <p id="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, expedita.</p>
+    <script>
+        var text = document.getElementById("para");
+        console.log(text);
+    </script>
 </body>
 </html>
